Fixed ipunt range thumb style on IE

--- a/css/ui.css
+++ b/css/ui.css
@@ -383,6 +383,7 @@ input[type=range] {
   -webkit-appearance: none;
   width: 100%;
   margin: 11.7px 0;
+  height:50px;
 }
 input[type=range]:focus {
   outline: none;
@@ -428,7 +429,8 @@ input[type=range]::-moz-range-thumb {
   background: #ffffff;
   cursor: pointer;
 }
-input[type=range]::-ms-track {
+/*IE custom input range START */
+::-ms-track {
   width: 100%;
   height: 4px;
   cursor: pointer;
@@ -436,34 +438,36 @@ input[type=range]::-ms-track {
   border-color: transparent;
   color: transparent;
 }
-input[type=range]::-ms-fill-lower {
+::-ms-fill-lower {
   background: #3399cc;
   border: 0px solid #000101;
   border-radius: 0px;
   box-shadow: 1px 1px 1px rgba(0, 0, 0, 0), 0px 0px 1px rgba(13, 13, 13, 0);
 }
-input[type=range]::-ms-fill-upper {
+::-ms-fill-upper {
   background: #3399cc;
   border: 0px solid #000101;
   border-radius: 0px;
   box-shadow: 1px 1px 1px rgba(0, 0, 0, 0), 0px 0px 1px rgba(13, 13, 13, 0);
 }
-input[type=range]::-ms-thumb {
+::-ms-thumb {
   box-shadow: 1px 1px 2px #3399cc, 0px 0px 1px #47a3d1;
-  border: 2px solid rgba(51, 153, 204, 0);
-  height: 27px;
+  border: 1px solid rgba(51, 153, 204, 0.5);
   width: 35px;
   border-radius: 5px;
+  margin-top: -6px;
   background: #ffffff;
   cursor: pointer;
-  height: 4px;
+  height: 25px;
 }
+
 input[type=range]:focus::-ms-fill-lower {
   background: #3399cc;
 }
 input[type=range]:focus::-ms-fill-upper {
   background: #3399cc;
 }
+/*IE custom input range END */
 
 input.typeRadio {
     border: 1px solid #eee;
